; ModuleID = '/home/carl/AnghaBench/zfs/module/icp/asm-x86_64/aes/extr_aeskey.c_aes_encrypt_key192.c'
source_filename = "/home/carl/AnghaBench/zfs/module/icp/asm-x86_64/aes/extr_aeskey.c_aes_encrypt_key192.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @aes_encrypt_key192 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @aes_encrypt_key192(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca [6 x i32], align 16
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @word_in(i8* %7, i32 0)
  %9 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 0
  store i32 %8, i32* %9, align 16
  %10 = load i32*, i32** %4, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  store i32 %8, i32* %11, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @word_in(i8* %12, i32 1)
  %14 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 1
  store i32 %13, i32* %14, align 4
  %15 = load i32*, i32** %4, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 1
  store i32 %13, i32* %16, align 4
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @word_in(i8* %17, i32 2)
  %19 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 2
  store i32 %18, i32* %19, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 2
  store i32 %18, i32* %21, align 4
  %22 = load i8*, i8** %3, align 8
  %23 = call i32 @word_in(i8* %22, i32 3)
  %24 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 3
  store i32 %23, i32* %24, align 4
  %25 = load i32*, i32** %4, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 3
  store i32 %23, i32* %26, align 4
  %27 = load i8*, i8** %3, align 8
  %28 = call i32 @word_in(i8* %27, i32 4)
  %29 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 4
  store i32 %28, i32* %29, align 16
  %30 = load i32*, i32** %4, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 4
  store i32 %28, i32* %31, align 4
  %32 = load i8*, i8** %3, align 8
  %33 = call i32 @word_in(i8* %32, i32 5)
  %34 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 5
  store i32 %33, i32* %34, align 4
  %35 = load i32*, i32** %4, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 5
  store i32 %33, i32* %36, align 4
  store i32 0, i32* %6, align 4
  br label %37

37:                                               ; preds = %44, %2
  %38 = load i32, i32* %6, align 4
  %39 = icmp slt i32 %38, 7
  br i1 %39, label %40, label %47

40:                                               ; preds = %37
  %41 = load i32*, i32** %4, align 8
  %42 = load i32, i32* %6, align 4
  %43 = call i32 @ke6(i32* %41, i32 %42)
  br label %44

44:                                               ; preds = %40
  %45 = load i32, i32* %6, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %6, align 4
  br label %37

47:                                               ; preds = %37
  %48 = load i32*, i32** %4, align 8
  %49 = call i32 @kef6(i32* %48, i32 7)
  ret void
}

declare dso_local i32 @word_in(i8*, i32) #1

declare dso_local i32 @ke6(i32*, i32) #1

declare dso_local i32 @kef6(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
